Made some changes
Extended the functionality a bit to include datastores

--- a/roles/profiles/templates/ks.cfg.j2
+++ b/roles/profiles/templates/ks.cfg.j2
@@ -9,19 +9,21 @@ keyboard 'US Default'
 # Clear all existing partitions
 clearpart --alldrives --overwritevmfs
 
-install --firstdisk --overwritevmfs
-
 #Set password
 rootpw {{ root_password }}
 
-reboot
-
 {% if item is defined %}
+install --disk={{ hostvars[item].boot_drive }} --overwritevmfs
 network --device={{ hostvars[item].mac | lower }} --bootproto=static --ip={{ hostvars[item].ip }} --netmask={{ netmask }} --gateway={{ gateway }} --nameserver={{ dns }} --hostname={{ item }}
+{% for datastore in hostvars[item].datastores %}
+partition {{ datastore }} --ondisk={{ hostvars[item].datastores[datastore].disk }}
+{% endfor %}
 {% else %}
+install --firstdisk --overwritevmfs
 network  --bootproto=dhcp
 network  --hostname=localhost.localdomain
 {% endif %}
+
 
 %firstboot --interpreter=busybox
 
@@ -29,7 +31,6 @@ sleep 20
 esxcli network vswitch standard uplink add --uplink-name vmnic1 --vswitch-name vSwitch0
 esxcli network ip dns search add --domain={{ domain }}
 esxcli network ip dns server add --server={{ dns }}
-esxcli system maintenanceMode set -e true
 
 #Suppress shell warning
 esxcli system settings advanced set -o /UserVars/SuppressShellWarning -i 1
